# fastapi-sqlalchemy

./: .flake8  .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  format.yml  release.yml
examples/: fastapi-sqlalchemy_examples.postman_collection.json
examples/legacy/: app.py  models.py
examples/multi_db/: app.py
examples/multi_db/models/: __init__.py  posts.py  users.py
examples/single_db/: app.py  models.py
fastapi_sqlalchemy/: __init__.py  async_middleware.py  decorators.py  exceptions.py  extensions.py  middleware.py  sqlalchemy_types.py  types.py
tests/: conftest.py  test_async_session.py  test_session.py
